Add print endpoint